--- a/themes/casper/layouts/_default/list.html
+++ b/themes/casper/layouts/_default/list.html
@@ -9,7 +9,7 @@
 	<header class="main-header tag-head no-cover">
 {{end}}
     <nav class="main-nav overlay clearfix">
-        <a class="back-button icon-arrow-left" href="{{ .Site.BaseUrl }}">Home</a>
+        <a class="back-button icon-arrow-left" href="{{ .Site.BaseUrl }}/#content">Home</a>
     	<a class="subscribe-button icon-feed" href="{{ .RSSLink }}">Subscribe</a>
     </nav>
     <div class="vertical">
