--- a/themes/casper/layouts/_default/single.html
+++ b/themes/casper/layouts/_default/single.html
@@ -8,7 +8,7 @@
 <header class="main-header post-head no-cover">
   <nav class="main-nav clearfix">
 {{end}}
-    <a class="back-button icon-arrow-left" href="{{ .Site.BaseURL }}/#content">Home</a>
+    <a class="back-button icon-arrow-left" href="{{ .Site.BaseURL }}#content">Home</a>
     <a class="subscribe-button icon-feed" href="{{ .RSSLink }}">Subscribe</a>
   </nav>
 </header>
