--- a/themes/typo/layouts/partials/footer.html
+++ b/themes/typo/layouts/partials/footer.html
@@ -1,7 +1,7 @@
 <p>Powered by
-    <a href="https://gohugo.io/">Hugo</a>
+    <a href="https://gohugo.io/" target="_blank">Hugo</a>
     and
-    <a href="https://github.com/tomfran/typo">tomfran/typo</a>
+    <a href="https://github.com/tomfran/typo" target="_blank">tomfran/typo</a>
 </p>
 
 {{ if .Param "math" }}
